Added fried chicken page and image - changed links on the index file - corrected error in the ramen code

--- a/recipes/ramen.html
+++ b/recipes/ramen.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
     <head>
-        <meta charset="ETF=8"
+        <meta charset="UTF=8"
         <title>Ramen</title>
     </head>
 
@@ -21,6 +21,7 @@
             <li>2 tablespoons ground ginger</li>
             <li>Salt and ground black pepper to taste</li>
         </ul>
+        <h3>Directions</h3>
         <ol>
             <li>Bring 2 cups water to a boil in a saucepan. Cook noodles in boiling water until tender, about 3 minutes. Stir garlic powder, onion powder, and ginger into the noodles and water; season with salt and black pepper.</li>
             <li>Eat!</li>
