--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
         <h1>My Recipes</h1>
         <p><a href="./recipes/ramen.html">Ramen</a></p>
         <p><a href="./recipes/steak.html">Steak</a></p>
-        <p><a href="./recipes/hande.html">Hande</a></p>
+        <p><a href="./recipes/fried_chicken.html">Fried Chicken</a></p>
     </body>
 </html>
