Added return to top and main menu for all recipe pages

--- a/recipes/fried_chicken.html
+++ b/recipes/fried_chicken.html
@@ -7,7 +7,7 @@
     </head>
 
     <body>
-        <h1>Fried Chicken</h1>
+        <h1 id="header">Fried Chicken</h1>
         <img src="../images/fried_chicken.jpeg" alt="Fried Chicken">
         <h3>Description</h3>
         <p>Fried chicken has been described as being "crunchy" and "juicy", as well as "crispy". The dish has also been called "spicy" and "salty". Occasionally, fried chicken is also topped with chili like paprika, or hot sauce to give it a spicy taste. This is especially common in fast food restaurant chains such as KFC.</p>
@@ -25,7 +25,8 @@
             <li>Drain pickle juice from thighs. Cover chicken; refrigerate until ready to fry or up to 1 day.</li>
             <li>Preheat the oven to 350 degrees F (175 degrees C). Set a wire rack over a baking sheet.</li>
             <li>Bake in the preheated oven until no longer pink in the center and the juices run clear, 5 to 8 minutes. An instant-read thermometer inserted into the center should read at least 165 degrees F (74 degrees C).</li>
-            
         </ol>
+        <a href="#header">Return to Top</a>
+        <a href="../index.html">Return to Main Menu</a>
     </body>
 </html>
