--- a/recipes/ramen.html
+++ b/recipes/ramen.html
@@ -7,7 +7,7 @@
     </head>
 
     <body>
-        <h1>Ramen</h1>
+        <h1 id="header">Ramen</h1>
         <img src="../images/ramen.jpeg" alt="Ramen"> 
         <h3>Description</h3>
         <p>Inspired by the shoyu ramen at my favorite ramen restaurant, this is my ideal ramen. If you want to make it pescatarian, I suggest foregoing the pork belly for bonito flakes -- just a big pinch in each bowl.</p>
@@ -26,5 +26,7 @@
             <li>Bring 2 cups water to a boil in a saucepan. Cook noodles in boiling water until tender, about 3 minutes. Stir garlic powder, onion powder, and ginger into the noodles and water; season with salt and black pepper.</li>
             <li>Eat!</li>
         </ol>
+        <a href="#header">Return to Top</a>
+        <a href="../index.html">Return to Main Menu</a>
     </body>
 </html>
