--- a/recipes/steak.html
+++ b/recipes/steak.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-    <h1>Steak</h1>
+    <h1 id="header">Steak</h1>
     <img src="../images/steak.jpeg" alt="Steak">
     <h3>Description</h3>
     <p>Steak is a food that can be described as tender, flavorful, juicy, and cooked to perfection; in fact, most consumers describe their ideal steak as just that: "A tender, flavorful, medium-rare steak that isn't overly salty." "Tender, juicy, cooked perfectly and perfectly seasoned."</p>
@@ -24,5 +24,7 @@
         <li>Remove steak from the pan when it has developed a brown crust, is beginning to firm, and is hot and slightly pink in the center, about 3 to 4 minutes of total cooking time for a 1-inch steak. Check for doneness using an instant-read thermometer inserted into the center: 125 degrees F (52 degrees C) for rare; 130 degrees F (54 degrees C) for medium-rare; 145 degrees F (65 degrees C) for medium; or 160 degrees F (70 degrees C) for well-done.</li>
         <li>Cover steak with 2 layers of aluminum foil and allow to rest in a warm area for 5 minutes.</li>
     </ol>
+    <a href="#header">Return to Top</a>
+    <a href="../index.html">Return to Main Menu</a>
 </body>
 </html>
