--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
     <body>
         <h1>My Recipes</h1>
+        <img src="./images/me.JPG"
+        <h3>Hi! This is me. I am Toygun. Welcome you filthy animal!</h3>
         <p><a href="./recipes/ramen.html">Ramen</a></p>
         <p><a href="./recipes/steak.html">Steak</a></p>
         <p><a href="./recipes/fried_chicken.html">Fried Chicken</a></p>
