--- a/recipes/ramen.html
+++ b/recipes/ramen.html
@@ -26,7 +26,7 @@
             <li>Bring 2 cups water to a boil in a saucepan. Cook noodles in boiling water until tender, about 3 minutes. Stir garlic powder, onion powder, and ginger into the noodles and water; season with salt and black pepper.</li>
             <li>Eat!</li>
         </ol>
-        <a href="#header">Return to Top</a>
-        <a href="../index.html">Return to Main Menu</a>
+        <p><a href="#header">Return to Top</a></p>
+        <p><a href="../index.html">Return to Main Menu</a></p>
     </body>
 </html>
