--- a/index.html
+++ b/index.html
@@ -4,14 +4,17 @@
     <head>
         <meta charset="UTF-8"
         <title>Odin Recipes Webpage</title>
+        <link rel="Stylesheet" href="styles.css">
     </head>
 
     <body>
-        <h1>My Recipes</h1>
-        <img src="./images/me.JPG"
-        <h3>Hi! This is me. I am Toygun. Welcome you filthy animal!</h3>
-        <p><a href="./recipes/ramen.html">Ramen</a></p>
-        <p><a href="./recipes/steak.html">Steak</a></p>
-        <p><a href="./recipes/fried_chicken.html">Fried Chicken</a></p>
+        <h1 id="h1">My Recipes</h1>
+        <p><img id="photo" src="./images/me.JPG"></p>
+        <h3 id="h3">Hi! This is me. I am Toygun. Welcome you filthy animal!</h3>
+        <div class="links">
+            <p><a href="./recipes/ramen.html">Ramen</a></p>
+            <p><a href="./recipes/steak.html">Steak</a></p>
+            <p><a href="./recipes/fried_chicken.html">Fried Chicken</a></p>
+        </div>
     </body>
 </html>
