Styled my web-site with CSS

--- a/recipes/fried_chicken.html
+++ b/recipes/fried_chicken.html
@@ -13,7 +13,7 @@
         <h3 id="h3">Description</h3>
         <div class="desc">
             <p>Fried chicken has been described as being "crunchy" and "juicy", as well as "crispy". The dish has also been called "spicy" and "salty". Occasionally, fried chicken is also topped with chili like paprika, or hot sauce to give it a spicy taste. This is especially common in fast food restaurant chains such as KFC.</p>
-            <p>Love me some good Chicken! Yum yum!</p>
+            <p><em>Love me some good Chicken! Yum yum!</em></p>
         </div>
         
         <h3 id="h3">Ingredients</h3>
@@ -30,7 +30,7 @@
             <li>Preheat the oven to 350 degrees F (175 degrees C). Set a wire rack over a baking sheet.</li>
             <li>Bake in the preheated oven until no longer pink in the center and the juices run clear, 5 to 8 minutes. An instant-read thermometer inserted into the center should read at least 165 degrees F (74 degrees C).</li>
         </ol>
-        <div class="links">
+        <div class="links big">
             <p><a href="#h1">Return to Top</a></p>
             <p><a href="../index.html">Return to Main Menu</a></p>
         </div>
