--- a/recipes/steak.html
+++ b/recipes/steak.html
@@ -12,7 +12,7 @@
     <h3 id="h3">Description</h3>
     <div class="desc">
         <p>Steak is a food that can be described as tender, flavorful, juicy, and cooked to perfection; in fact, most consumers describe their ideal steak as just that: "A tender, flavorful, medium-rare steak that isn't overly salty." "Tender, juicy, cooked perfectly and perfectly seasoned."</p>
-        <p>Steak is GOOD!</p>
+        <p><em>Steak is GOOD!</p></em>
     </div>
     <h3 id="h3">Ingredients</h3>
     <ul>
@@ -27,7 +27,7 @@
         <li>Remove steak from the pan when it has developed a brown crust, is beginning to firm, and is hot and slightly pink in the center, about 3 to 4 minutes of total cooking time for a 1-inch steak. Check for doneness using an instant-read thermometer inserted into the center: 125 degrees F (52 degrees C) for rare; 130 degrees F (54 degrees C) for medium-rare; 145 degrees F (65 degrees C) for medium; or 160 degrees F (70 degrees C) for well-done.</li>
         <li>Cover steak with 2 layers of aluminum foil and allow to rest in a warm area for 5 minutes.</li>
     </ol>
-    <div class="links">
+    <div class="links big">
         <p><a href="#h1">Return to Top</a></p>
         <p><a href="../index.html">Return to Main Menu</a></p>
     </div>
