--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1 id="h1">My Recipes</h1>
         <p><img id="photo" src="./images/me.JPG"></p>
         <h3 id="h3">Hi! This is me. I am Toygun. Welcome you filthy animal!</h3>
-        <div class="links">
+        <div class="links big">
             <p><a href="./recipes/ramen.html">Ramen</a></p>
             <p><a href="./recipes/steak.html">Steak</a></p>
             <p><a href="./recipes/fried_chicken.html">Fried Chicken</a></p>
