--- a/recipes/ramen.html
+++ b/recipes/ramen.html
@@ -13,7 +13,8 @@
         <h3 id="h3">Description</h3>
         <div class="desc">
             <p>Inspired by the shoyu ramen at my favorite ramen restaurant, this is my ideal ramen. If you want to make it pescatarian, I suggest foregoing the pork belly for bonito flakes -- just a big pinch in each bowl.</p>
-            <p>Simply put, ramen is a Japanese noodle soup, with a combination of a rich flavoured broth, one of a variety of types of noodle and a selection of meats or vegetables, often topped with a boiled egg.</p>
+            <p><em>Simply put, ramen is a Japanese noodle soup, with a combination of a rich flavoured broth, one of a variety of types of noodle and a selection of meats or vegetables, often topped with a boiled egg.</p>
+            <p><em>Simply put, ramen is a Japanese noodle soup, with a combination of a rich flavoured broth, one of a variety of types of noodle and a selection of meats or vegetables, often topped with a boiled egg.</em></p>
         </div>
         <h3 id="h3">Ingredients</h3>
         <ul>
@@ -29,7 +30,7 @@
             <li>Bring 2 cups water to a boil in a saucepan. Cook noodles in boiling water until tender, about 3 minutes. Stir garlic powder, onion powder, and ginger into the noodles and water; season with salt and black pepper.</li>
             <li>Eat!</li>
         </ol>
-        <div class="links">
+        <div class="links big">
             <p><a href="#h1">Return to Top</a></p>
             <p><a href="../index.html">Return to Main Menu</a></p>
         </div>
