--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8"
-        <title>Odin Recipes Webpage</title>
+        <title class="inv">Odin Recipes Webpage</title>
         <link rel="Stylesheet" href="styles.css">
     </head>
 
@@ -11,10 +11,8 @@
         <h1 id="h1">My Recipes</h1>
         <p><img id="photo" src="./images/me.JPG"></p>
         <h3 id="h3">Hi! This is me. I am Toygun. Welcome you filthy animal!</h3>
-        <div class="links big">
-            <p><a href="./recipes/ramen.html">Ramen</a></p>
-            <p><a href="./recipes/steak.html">Steak</a></p>
-            <p><a href="./recipes/fried_chicken.html">Fried Chicken</a></p>
-        </div>
+        <p><a href="./recipes/ramen.html" class="links">Ramen</a></p>
+        <p><a href="./recipes/steak.html" class="links">Steak</a></p>
+        <p><a href="./recipes/fried_chicken.html" class="links">Fried Chicken</a></p>
     </body>
 </html>
