--- a/recipes/fried_chicken.html
+++ b/recipes/fried_chicken.html
@@ -30,9 +30,7 @@
             <li>Preheat the oven to 350 degrees F (175 degrees C). Set a wire rack over a baking sheet.</li>
             <li>Bake in the preheated oven until no longer pink in the center and the juices run clear, 5 to 8 minutes. An instant-read thermometer inserted into the center should read at least 165 degrees F (74 degrees C).</li>
         </ol>
-        <div class="links big">
-            <p><a href="#h1">Return to Top</a></p>
-            <p><a href="../index.html">Return to Main Menu</a></p>
-        </div>
+        <p><a href="#h1" class="links">Return to Top</a></p>
+        <p><a href="../index.html" class="links">Return to Main Menu</a></p>
     </body>
 </html>
