Fixed italic error

--- a/recipes/ramen.html
+++ b/recipes/ramen.html
@@ -13,7 +13,7 @@
         <h3 id="h3">Description</h3>
         <div class="desc">
             <p>Inspired by the shoyu ramen at my favorite ramen restaurant, this is my ideal ramen. If you want to make it pescatarian, I suggest foregoing the pork belly for bonito flakes -- just a big pinch in each bowl.</p>
-            <p><em>Simply put, ramen is a Japanese noodle soup, with a combination of a rich flavoured broth, one of a variety of types of noodle and a selection of meats or vegetables, often topped with a boiled egg.</p>
+            <p><em>Simply put, ramen is a Japanese noodle soup, with a combination of a rich flavoured broth, one of a variety of types of noodle and a selection of meats or vegetables, often topped with a boiled egg.</em></p>
             <p><em>Simply put, ramen is a Japanese noodle soup, with a combination of a rich flavoured broth, one of a variety of types of noodle and a selection of meats or vegetables, often topped with a boiled egg.</em></p>
         </div>
         <h3 id="h3">Ingredients</h3>
