Messed around with block and inline elements will update further with flexbox

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
         <h1 id="h1">My Recipes</h1>
         <p><img id="photo" src="./images/me.JPG"></p>
         <h3 id="h3">Hi! This is me. I am Toygun. Welcome you filthy animal!</h3>
-        <p><a href="./recipes/ramen.html" class="links">Ramen</a></p>
-        <p><a href="./recipes/steak.html" class="links">Steak</a></p>
-        <p><a href="./recipes/fried_chicken.html" class="links">Fried Chicken</a></p>
+        <div class="box">
+            <span class="span"><a href="./recipes/ramen.html" class="links">Ramen</a></span>
+            <span class="span"><a href="./recipes/steak.html" class="links">Steak</a></span>
+            <span class="span"><a href="./recipes/fried_chicken.html" class="links">Fried Chicken</a></span>
+        </div>
     </body>
 </html>
